Create Gridbot files

--- a/src/notebook/bot.ipynb
+++ b/src/notebook/bot.ipynb
@@ -426,8 +426,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.02200000000000002,\n",
-       " 0.09200000000000008,\n",
+       "[0.09200000000000008,\n",
        " -0.08000000000000007,\n",
        " -0.001000000000000112,\n",
        " 0.02299999999999991,\n",
@@ -459,17 +458,17 @@
        " 0.17100000000000004,\n",
        " -0.16300000000000003,\n",
        " -0.13600000000000012,\n",
-       " -0.04200000000000004,\n",
-       " 0.04200000000000004,\n",
-       " -0.04200000000000004,\n",
-       " 0.018000000000000016,\n",
-       " -0.10699999999999998,\n",
-       " -0.07799999999999985,\n",
-       " 0.14300000000000002,\n",
-       " -0.008000000000000007,\n",
-       " -0.123,\n",
-       " 0.04299999999999993,\n",
-       " 0.04499999999999993,\n",
+       " -0.0,\n",
+       " 0.0,\n",
+       " -0.0,\n",
+       " 0.0,\n",
+       " -0.0,\n",
+       " -0.0,\n",
+       " 0.0,\n",
+       " -0.0,\n",
+       " -0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
        " -0.07099999999999995,\n",
        " -0.02200000000000002,\n",
        " 0.02400000000000002,\n",
@@ -709,7 +708,7 @@
    "source": [
     "strategy_return = []\n",
     "# cp_returns * macd_tb['position'][:-1]\n",
-    "for i in range(len(cp_returns)):\n",
+    "for i in range(1,len(cp_returns)):\n",
     "    r = cp_returns[i] * macd_tb['position'][i]\n",
     "    strategy_return.append(r)\n",
     "\n",
@@ -724,7 +723,7 @@
     {
      "data": {
       "text/plain": [
-       "-1.053"
+       "-0.966"
       ]
      },
      "execution_count": 11,
@@ -734,6 +733,282 @@
    ],
    "source": [
     "np.sum(strategy_return)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RSI strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Opentime</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Closetime</th>\n",
+       "      <th>Quote asset volume</th>\n",
+       "      <th>Number of trades</th>\n",
+       "      <th>Taker by base</th>\n",
+       "      <th>Taker buy quote</th>\n",
+       "      <th>Ignore</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-11-01 08:00:00</td>\n",
+       "      <td>1.965</td>\n",
+       "      <td>2.019</td>\n",
+       "      <td>1.911</td>\n",
+       "      <td>1.949</td>\n",
+       "      <td>144061135.4</td>\n",
+       "      <td>1635811199999</td>\n",
+       "      <td>2.824457e+08</td>\n",
+       "      <td>443944</td>\n",
+       "      <td>71078236.0</td>\n",
+       "      <td>1.394258e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-11-02 08:00:00</td>\n",
+       "      <td>1.949</td>\n",
+       "      <td>1.996</td>\n",
+       "      <td>1.933</td>\n",
+       "      <td>1.971</td>\n",
+       "      <td>124263204.0</td>\n",
+       "      <td>1635897599999</td>\n",
+       "      <td>2.446304e+08</td>\n",
+       "      <td>382592</td>\n",
+       "      <td>64339347.3</td>\n",
+       "      <td>1.267002e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-11-03 08:00:00</td>\n",
+       "      <td>1.971</td>\n",
+       "      <td>2.144</td>\n",
+       "      <td>1.950</td>\n",
+       "      <td>2.063</td>\n",
+       "      <td>335561983.7</td>\n",
+       "      <td>1635983999999</td>\n",
+       "      <td>6.936646e+08</td>\n",
+       "      <td>1237122</td>\n",
+       "      <td>167743048.3</td>\n",
+       "      <td>3.467647e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-11-04 08:00:00</td>\n",
+       "      <td>2.063</td>\n",
+       "      <td>2.103</td>\n",
+       "      <td>1.933</td>\n",
+       "      <td>1.983</td>\n",
+       "      <td>174549100.4</td>\n",
+       "      <td>1636070399999</td>\n",
+       "      <td>3.509825e+08</td>\n",
+       "      <td>586577</td>\n",
+       "      <td>80789835.4</td>\n",
+       "      <td>1.624612e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-11-05 08:00:00</td>\n",
+       "      <td>1.983</td>\n",
+       "      <td>2.017</td>\n",
+       "      <td>1.959</td>\n",
+       "      <td>1.982</td>\n",
+       "      <td>108180863.7</td>\n",
+       "      <td>1636156799999</td>\n",
+       "      <td>2.150281e+08</td>\n",
+       "      <td>346939</td>\n",
+       "      <td>51873631.3</td>\n",
+       "      <td>1.030921e+08</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Opentime   Open   High    Low  Close       Volume  \\\n",
+       "0  2021-11-01 08:00:00  1.965  2.019  1.911  1.949  144061135.4   \n",
+       "1  2021-11-02 08:00:00  1.949  1.996  1.933  1.971  124263204.0   \n",
+       "2  2021-11-03 08:00:00  1.971  2.144  1.950  2.063  335561983.7   \n",
+       "3  2021-11-04 08:00:00  2.063  2.103  1.933  1.983  174549100.4   \n",
+       "4  2021-11-05 08:00:00  1.983  2.017  1.959  1.982  108180863.7   \n",
+       "\n",
+       "       Closetime  Quote asset volume  Number of trades  Taker by base  \\\n",
+       "0  1635811199999        2.824457e+08            443944     71078236.0   \n",
+       "1  1635897599999        2.446304e+08            382592     64339347.3   \n",
+       "2  1635983999999        6.936646e+08           1237122    167743048.3   \n",
+       "3  1636070399999        3.509825e+08            586577     80789835.4   \n",
+       "4  1636156799999        2.150281e+08            346939     51873631.3   \n",
+       "\n",
+       "   Taker buy quote  Ignore  \n",
+       "0     1.394258e+08       0  \n",
+       "1     1.267002e+08       0  \n",
+       "2     3.467647e+08       0  \n",
+       "3     1.624612e+08       0  \n",
+       "4     1.030921e+08       0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../data/adausdt.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      NaN\n",
+       "1    0.022\n",
+       "2    0.092\n",
+       "3   -0.080\n",
+       "4   -0.001\n",
+       "Name: Close, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rets = df['Close'].diff()\n",
+    "rets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rsi_df = pd.DataFrame(index=df.index)\n",
+    "\n",
+    "rsi_df['up'] = np.where(rets < 0, rets, 0)\n",
+    "rsi_df['down'] = np.where(rets > 0, rets, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>up</th>\n",
+       "      <th>down</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.080</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      up   down\n",
+       "0  0.000  0.000\n",
+       "1  0.000  0.022\n",
+       "2  0.000  0.092\n",
+       "3 -0.080  0.000\n",
+       "4 -0.001  0.000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rsi_df.head()"
    ]
   }
  ],
